@@ -4,16 +4,18 @@
       "Unknown": {}
     },
     "actor": {
-      "partner": {
+      "external": {
         "country": [
           "US"
         ],
-        "industry": "000",
         "motive": [
           "NA"
         ],
-        "notes": "This is a test",
-        "region": "002000"
+        "notes": "test",
+        "region": "toolong",
+        "variety": [
+          "Other"
+        ]
       }
     },
     "asset": {
@@ -40,6 +42,6 @@
       }
     }
   },
-  "message": "valid incident with all partner fields set. Test should pass.",
-  "should": "pass"
+  "message": "actor.external.region is too long. test should fail.",
+  "should": "fail"
 }
