@@ -45,7 +45,7 @@
       "industry": "000",
       "locations_affected": 1,
       "notes": "test",
-      "region": "002000",
+      "region": "short",
       "revenue": {
         "amount": 1000000,
         "iso_currency_code": "USD"
@@ -62,6 +62,6 @@
       "victim_id": "test"
     }
   },
-  "message": "valid incident with all victim fields present. test should pass.",
-  "should": "pass"
+  "message": "victim.region is too short. test should fail.",
+  "should": "fail"
 }
